# csrf-newbie

./: README.md  pyproject.toml
src/: app.py  evil.py
src/static/: default.css
src/templates/: app.html  evil.html
