[tool.poetry]
name = "csrf-newbie"
version = "0.1.0"
description = ""
authors = ["Yuuki Takahashi <20282867+yktakaha4@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
